Fix overflow setting on jumbotron

--- a/resources/assets/sass/_menu.scss
+++ b/resources/assets/sass/_menu.scss
@@ -1,20 +1,20 @@
 .menu-board {
-  background: url('../img/blackboard.jpg') center center repeat;
+  background             : url('../img/blackboard.jpg') center center repeat;
   -webkit-background-size: auto;
-  -moz-background-size: auto;
-  background-size: auto;
-  height: 500px;
-  width: 100%;
-  margin: 0 auto;
-  overflow: scroll;
-  padding: 0 1rem;
-  font-size: 2.25rem;
-  font-family: 'chawpregular', cursive;
-  color: #fff;
+  -moz-background-size   : auto;
+  background-size        : auto;
+  height                 : 500px;
+  width                  : 100%;
+  margin                 : 0 auto;
+  overflow-y             : auto;
+  padding                : 0 1rem;
+  font-size              : 2.25rem;
+  font-family            : 'chawpregular', cursive;
+  color                  : #fff;
 }
 
 .menu-board h1 {
-  color: #fff;
+  color    : #fff;
   font-size: 3rem;
 }
 
@@ -23,10 +23,10 @@
 }
 
 .menu-board ul {
-  list-style: none;
+  list-style  : none;
   padding-left: 0;
-  max-width: 600px;
-  margin: auto;
+  max-width   : 600px;
+  margin      : auto;
 }
 
 .menu-board ul li {
@@ -34,13 +34,13 @@
 }
 
 .menu-item-panel:hover {
-  transform: scale(1.05);
+  transform : scale(1.05);
   transition: all 0.25s ease-in;
 }
 
 .menu-item-panel {
-  height: 15em;
-  overflow: hidden;
-  cursor: pointer;
+  height    : 15em;
+  overflow  : hidden;
+  cursor    : pointer;
   transition: all 0.25s ease-out;
 }
